[tool.poetry]
name = "operations analysis"
version = "0.1.0"
description = ""
authors = ["PC1HA <ilia.popov.2015@gmail.com>"]
readme = "README.md"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''
[tool.isort]
line-length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
exclude = 'venv'

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
